# life-explorer

./: .gitignore  Cargo.toml  README.md  discovered_patterns.jsonl
outputs/2d-even-split/: all_rules.csv  discovered_patterns.jsonl
outputs/2d-odd-continouis/: discovered_patterns.jsonl  explore_2d.csv
src/: analysis.rs  components.rs  explorer_1d.rs  explorer_2d.rs  extractor.rs  glider.rs  grid.rs  main.rs  massive.rs  output.rs  rule.rs
