[package]
name = "halflife-explorer"
version = "0.1.0"
edition = "2021"
description = "Half-Life cellular automata rule explorer and pattern extractor"

[dependencies]
rayon = "1.10"
rand = "0.8"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

[profile.release]
opt-level = 3
lto = true
